<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    tools:context=".Fragment.FavouriteFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/favouriteRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/miniPlayer_favScreen"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/play_pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/pause_icon"
            android:contentDescription="@string/play_pause_button"/>

        <ImageView
            android:id="@+id/default_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/now_playing_bar_eq_image"
            android:contentDescription="@string/player_image"/>

        <TextView
            android:id="@+id/miniPlayer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textColor="@color/colorGrey"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/default_image"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/miniPlayer_trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/track_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_toEndOf="@id/default_image"
            android:layout_below="@id/miniPlayer_header"
            android:layout_alignStart="@id/miniPlayer_header"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/noFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favourites_yet"
        android:textColor="@color/colorBlack"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>